[gd_scene load_steps=13 format=2]

[ext_resource path="res://script/menu.gd" type="Script" id=1]
[ext_resource path="res://scene/ps_2.tscn" type="PackedScene" id=2]
[ext_resource path="res://assest/font/font_size_150.tres" type="DynamicFont" id=3]
[ext_resource path="res://assest/white_bord.png" type="Texture" id=4]
[ext_resource path="res://assest/play.png" type="Texture" id=5]
[ext_resource path="res://assest/help1.png" type="Texture" id=6]
[ext_resource path="res://assest/help.png" type="Texture" id=7]
[ext_resource path="res://assest/highscore.png" type="Texture" id=8]
[ext_resource path="res://assest/font/font_size_80.tres" type="DynamicFont" id=9]
[ext_resource path="res://scene/fb.tscn" type="PackedScene" id=10]
[ext_resource path="res://21430582_386082681794352_9137376300107529647_n.png" type="Texture" id=11]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.735099 )
colors = PoolColorArray( 0.97735, 1, 0, 1, 1, 0, 0, 1 )

[node name="menu" type="Node"]
script = ExtResource( 1 )

[node name="ps_2" parent="." instance=ExtResource( 2 )]

[node name="title1" type="Label" parent="."]
modulate = Color( 0.356863, 1, 0.545098, 1 )
margin_left = 190.441
margin_top = 210.553
margin_right = 487.441
margin_bottom = 361.553
custom_fonts/font = ExtResource( 3 )
text = "MIN"

[node name="title2" type="Label" parent="."]
modulate = Color( 1, 0.168627, 0.411765, 1 )
margin_left = 490.441
margin_top = 210.553
margin_right = 876.441
margin_bottom = 361.553
custom_fonts/font = ExtResource( 3 )
text = "MAX"

[node name="play" type="Node" parent="."]
editor/display_folded = true

[node name="play_b" type="TouchScreenButton" parent="play"]
modulate = Color( 1, 0.843137, 0, 1 )
position = Vector2( 166.463, 893.985 )
scale = Vector2( 0.7, 0.1 )
normal = ExtResource( 4 )

[node name="play_l" type="Label" parent="play"]
margin_left = 201.306
margin_top = 922.105
margin_right = 587.306
margin_bottom = 1073.1
custom_fonts/font = ExtResource( 3 )
text = "Play"
align = 1

[node name="Sprite" type="Sprite" parent="play"]
position = Vector2( 825.426, 988.262 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 5 )

[node name="help" type="Node" parent="."]
editor/display_folded = true

[node name="help_b" type="TouchScreenButton" parent="help"]
modulate = Color( 1, 0.843137, 0, 1 )
position = Vector2( 166.463, 1197.98 )
scale = Vector2( 0.7, 0.1 )
normal = ExtResource( 4 )

[node name="help_l" type="Label" parent="help"]
margin_left = 201.0
margin_top = 1226.0
margin_right = 587.0
margin_bottom = 1377.0
custom_fonts/font = ExtResource( 3 )
text = "Help"

[node name="help_s" type="Sprite" parent="help"]
position = Vector2( 824.963, 1293.78 )
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 6 )

[node name="about" type="Node" parent="."]

[node name="about_b" type="TouchScreenButton" parent="about"]
modulate = Color( 1, 0.843137, 0, 1 )
position = Vector2( 166.463, 1498.98 )
scale = Vector2( 0.7, 0.1 )
normal = ExtResource( 4 )

[node name="about_l" type="Label" parent="about"]
margin_left = 187.0
margin_top = 1527.0
margin_right = 688.0
margin_bottom = 1678.0
custom_fonts/font = ExtResource( 3 )
text = "About"

[node name="abut_s" type="Sprite" parent="about"]
position = Vector2( 823.963, 1597.78 )
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 7 )

[node name="score" type="Node" parent="."]

[node name="ps_1" type="CPUParticles2D" parent="score"]
position = Vector2( 840.322, 758.105 )
rotation = 3.01635
amount = 50
lifetime = 1.6
preprocess = 2.0
flatness = 1.0
radial_accel = 200.0
radial_accel_random = 0.5
angle = 45.0
scale_amount = 10.0
color_ramp = SubResource( 1 )

[node name="ps2" type="CPUParticles2D" parent="score"]
position = Vector2( 242.866, 757.165 )
rotation = -2.24232
amount = 50
lifetime = 1.6
preprocess = 2.0
randomness = 0.5
flatness = 1.0
radial_accel = 200.0
radial_accel_random = 0.5
angle = 45.0
scale_amount = 10.0
color_ramp = SubResource( 1 )

[node name="score_s" type="Sprite" parent="score"]
modulate = Color( 1, 0.937255, 0, 1 )
position = Vector2( 539.15, 665.68 )
scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 8 )

[node name="score_l" type="Label" parent="score"]
margin_left = 432.605
margin_top = 618.023
margin_right = 657.605
margin_bottom = 709.023
custom_fonts/font = ExtResource( 9 )
text = "0"
align = 1

[node name="fb" parent="." instance=ExtResource( 10 )]
position = Vector2( 865.209, 1738.01 )

[node name="21430582_386082681794352_9137376300107529647_n" type="Sprite" parent="."]
position = Vector2( 140.958, 1801.6 )
scale = Vector2( 0.347757, 0.328573 )
texture = ExtResource( 11 )

[connection signal="pressed" from="play/play_b" to="." method="_on_play_b_pressed"]
[connection signal="pressed" from="help/help_b" to="." method="_on_help_b_pressed"]
[connection signal="pressed" from="about/about_b" to="." method="_on_about_b_pressed"]
